--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/material": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.1",
+    "uuid": "^11.0.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
